2018-08-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-strcpy-1.c:
	  Reduce risk of timeout due to long test.

2018-08-23 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/stm8.cc:
	  Fix bug #2803.

2018-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/hc08/spec.mk,
	  support/regression/ports/s08/spec.mk,
	  support/regression/tests/gcc-torture-execute-arith-rand.c,
	  support/regression/tests/gcc-torture-execute-strcmp-1.c,
	  support/regression/tests/gcc-torture-execute-strncmp-1.c:
	  Reduce risk of timeouts due to long tests.
	* support/regression/tests/rand.c:
	  Disable a test on the broken OpenBSD.

2018-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* sdcc/doc/sdccman.lyx:
	  Update documentation on library memory models.

2018-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* sdcc/sdccconf_in.h,
	  sdcc/doc/sdccman.lyx:
	  Remove infrastructure for STX support.

2018-08-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/gcc-torture-execute-20060110-2.c: enabled test
	* support/regression/tests/gcc-torture-execute-arith-rand.c: run only 100x

2018-08-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genSend): fixed bugs #2778, #2736
	* support/regression/tests/gcc-torture-execute-divconst-3.c: enabled test
	* support/regression/fwk/include/testfwk.h: added __printu, fixed __printd
	* support/regression/tests/bug-1981238.c: enabled more tests
	* support/regression/tests/gcc-torture-execute-pr86231.c: fixed warnings
	* support/regression/tests/gcc-torture-execute-va-arg-14.c: suppress warning

2018-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr85529-2.c:
	  Disable a test for older GCC.
	* support/regression/tests/new_wide.c:
	  Disable a test for host.

2018-08-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCloop.c:
	  Fix bug #2794.

2018-08-06 Philipp Klaus Krause <pkk AT spth.de>
