@@ -1,3 +1,10 @@
+2018-08-25 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCicode.h,
+	  src/SDCCicode.c,
+	  support/regression/tests/bug-2804.c:
+	  Fix bug #2804.
+
 2018-08-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/gcc-torture-execute-strcpy-1.c:
